sand-macros/tests/cases/fail_wrong_macro.rs
use sand_macros::function;

// A function that returns a wrong type should fail.
#[function]
fn my_func() {
    "not a vec"
}

fn main() {}
